third_party/dawn/third_party/dxc/tools/clang/test/HLSLFileCheck/hlsl/diagnostics/errors/correct_delay.hlsl
// RUN: %dxc -E main -T vs_6_0 %s | FileCheck %s

// CHECK: use of undeclared identifier

float x;
float a = (x < b) ? c : d;
